fixed modal on mobile

--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -642,7 +642,6 @@
     &__call-modal
       margin-left: auto
       margin-right: auto
-      margin-bottom: 50px
 
 // section active classes
 // animations control
@@ -736,6 +735,7 @@
     top: 50%
     left: 50%
     width: 100%
+    opacity: 0
     transform: translate3d(-50%,-50%,0)
     z-index: 6
     -webkit-clip-path: circle(0px at center)
