--- a/src/sass/elements/_buttons.sass
+++ b/src/sass/elements/_buttons.sass
@@ -42,3 +42,7 @@ button
   &:hover
     &::after
       transform: translateX(0%)
+
++r($mobile)
+  .btn
+    padding: 25px 60px
