--- a/src/sass/elements/_modal.sass
+++ b/src/sass/elements/_modal.sass
@@ -19,7 +19,7 @@
   &__form
     margin: auto 0% auto 15%
     max-width: 480px
-    pointer-events: all
+    pointer-events: none
     .ui-group
       opacity: 0
       transform: translate3d(-25px,0,0)
@@ -43,6 +43,7 @@
           border-color: transparent
   &.opened
     .modal__form
+      pointer-events: all
       .ui-group
         opacity: 1
         transform: translate3d(0,0,0)
@@ -74,9 +75,11 @@
         margin-top: 15px
         text-align: center
         max-width: 300px
+        padding-left: 0
 
 +r($mobile)
   .modal
     &__form
       margin-left: 0
       margin-right: 0
+      padding-bottom: 50px
