--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -27,3 +27,11 @@
 
 .ui-group
   margin-bottom: 17px
+
++r($mobile)
+  .ui-input
+    padding: 25px 60px
+    &--user
+      background-position: 25px center
+    &--email
+      background-position: 25px center
